[gd_scene load_steps=5 format=3 uid="uid://bm56twnc3fphx"]

[ext_resource type="Script" uid="uid://cy00evsxkkyea" path="res://scripts/workday_new/event_popup.gd" id="1_kj05t"]
[ext_resource type="Texture2D" uid="uid://cj1qx703nww1v" path="res://assets/workday_new/ui/events/event_popup_background.png" id="2_background"]
[ext_resource type="FontFile" uid="uid://cdja3eosvd0mn" path="res://assets/font/LEEEAFHEI-REGULAR.TTF" id="3_2ffqk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1"]
texture = ExtResource("2_background")

[node name="EventPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kj05t")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="PopupPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -936.0
offset_top = -522.0
offset_right = 942.0
offset_bottom = 528.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1")

[node name="CloseButton" type="Button" parent="PopupPanel"]
z_index = 10
layout_mode = 1
offset_left = 21.0
offset_top = 27.0
offset_right = 306.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 20
flat = true

[node name="HSplitContainer" type="HSplitContainer" parent="PopupPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 120.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 100

[node name="LeftPanel" type="Control" parent="PopupPanel/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="EventImage" type="TextureRect" parent="PopupPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="PopupPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -554.0
offset_top = 119.0
offset_right = 33.0
offset_bottom = 189.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2ffqk")
theme_override_font_sizes/font_size = 50
text = "事件标题"

[node name="ContentText" type="RichTextLabel" parent="PopupPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = 216.0
offset_right = -153.0
offset_bottom = -278.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 9
theme_override_fonts/normal_font = ExtResource("3_2ffqk")
theme_override_font_sizes/normal_font_size = 25
text = "事件内容描述..."
fit_content = true

[node name="AttributesBar" type="HBoxContainer" parent="PopupPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -554.0
offset_top = -240.0
offset_right = 158.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="AttributeInfoContainer" type="VBoxContainer" parent="PopupPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -554.0
offset_top = -116.0
offset_right = -328.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 1

[node name="CurrentAttributeLabel" type="Label" parent="PopupPanel/HSplitContainer/LeftPanel/AttributeInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2ffqk")
theme_override_font_sizes/font_size = 18
text = "当前属性: "
horizontal_alignment = 1

[node name="RequirementStatusLabel" type="Label" parent="PopupPanel/HSplitContainer/LeftPanel/AttributeInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2ffqk")
theme_override_font_sizes/font_size = 18
text = "检定状态: "
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="PopupPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 270.0
offset_top = -180.0
offset_right = 387.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="AcceptButton" type="Button" parent="PopupPanel/HSplitContainer/LeftPanel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "接受"

[node name="RejectButton" type="Button" parent="PopupPanel/HSplitContainer/LeftPanel/ButtonsContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "拒绝"

[node name="RightPanel" type="Control" parent="PopupPanel/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="SlotsPanelContainer" type="VBoxContainer" parent="PopupPanel/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 99.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotsTitle" type="Label" parent="PopupPanel/HSplitContainer/RightPanel/SlotsPanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2ffqk")
theme_override_font_sizes/font_size = 42
text = "卡牌槽位"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PopupPanel/HSplitContainer/RightPanel/SlotsPanelContainer"]
layout_mode = 2

[node name="SlotsContainer" type="VBoxContainer" parent="PopupPanel/HSplitContainer/RightPanel/SlotsPanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
